# unsharp-mask-opencl

./: .gitignore  CMakeLists.txt  CourseworkConfig.cmake  LICENSE  README.md
CMake/: File2Code.cmake  UnsharpMaskConfig.cmake
CMake/Modules/: FindOpenCL_CLHPP.cmake  FindOpenCL_Headers.cmake  FindOpenCL_ICD_Loader.cmake
Dependencies/: CMakeLists.txt
Dependencies/CMake/: CopyFiles.cmake  External_GLEW.cmake  External_GLFW.cmake  External_OpenCL-CLHPP.cmake  External_OpenCL-Headers.cmake  External_OpenCL-ICD-Loader.cmake  External_OpenCL.cmake
Dependencies/CMake/ExternalProject/: Docopt.cmake  GLEW.cmake  GLFW.cmake  OpenCL-ICD-Loader.cmake
ImageViewer/: CMakeLists.txt
ImageViewer/Include/: App.hpp  ImageViewer.hpp  Main.hpp  Menu.hpp  Program.hpp
ImageViewer/Source/: App.cpp  ImageViewer.cpp  Main.cpp  Menu.cpp  Program.cpp
UnsharpMask/: CMakeLists.txt
UnsharpMask/Include/: Main.hpp  PPM.hpp  PPMImage.hpp  Program.hpp  UnsharpMask.hpp  Utility.hpp
UnsharpMask/Include/ImageFilter/: ImageFilter.hpp
UnsharpMask/Include/ImageFilter/Parallel/: ParallelBlurFastFilter.hpp  ParallelBlurFilter.hpp  ParallelGaussianSharpFilter.hpp  ParallelSharpFastFilter.hpp  ParallelSharpFilter.hpp
UnsharpMask/Include/ImageFilter/Serial/: SerialBlurFilter.hpp  SerialSharpFilter.hpp
UnsharpMask/Include/ImageProcess/: ImageProcess.hpp  ParallelSharpProcess.hpp  SharpProcess.hpp
UnsharpMask/Include/ImageProcess/Parallel/: ParallelBlurSharpFastProcess.hpp  ParallelBlurSharpProcess.hpp  ParallelGaussianSharpProcess.hpp
UnsharpMask/Include/ImageProcess/Serial/: SerialBlurSharpProcess.hpp
UnsharpMask/OpenCL/: BlurSharp.cl  BlurSharpCache.cl  BlurSharpFast.cl  GaussianSharp.cl  Kernel.cl
UnsharpMask/Source/: Main.cpp  PPM.cpp  PPMImage.cpp  Program.cpp
UnsharpMask/Source/ImageFilter/: ImageFilter.cpp
UnsharpMask/Source/ImageFilter/Parallel/: ParallelBlurFastFilter.cpp  ParallelBlurFilter.cpp  ParallelGaussianSharpFilter.cpp  ParallelSharpFastFilter.cpp  ParallelSharpFilter.cpp
UnsharpMask/Source/ImageFilter/Serial/: SerialBlurFilter.cpp  SerialSharpFilter.cpp
UnsharpMask/Source/ImageProcess/: ImageProcess.cpp  ParallelSharpProcess.cpp  SharpProcess.cpp
UnsharpMask/Source/ImageProcess/Parallel/: ParallelBlurSharpFastProcess.cpp  ParallelBlurSharpProcess.cpp  ParallelGaussianSharpProcess.cpp
UnsharpMask/Source/ImageProcess/Serial/: SerialBlurSharpProcess.cpp
